<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="255dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/bgLight"
    android:layout_margin="20dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="125dp">

        <ImageView
            android:id="@+id/img_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:src="@drawable/food"
            android:scaleType="centerCrop"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="140dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="12sp"
            android:textColor="@color/text"/>

        <TextView
            android:id="@+id/date_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_publish"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="12sp"
            android:textColor="@color/text"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/title_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="12sp"
            android:textColor="@color/text"
            android:layout_marginTop="40dp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>