<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="563dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/bgLight">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/title_reward"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/hyundai_santa_fe"
                android:gravity="right"
                android:textColor="@color/text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/desc_reward"
                android:layout_marginTop="85dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/description"
                android:textColor="@color/text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/content_desc_reward"
                android:layout_marginTop="110dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/descriptopn"
                android:textColor="@color/text"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/vector_7"
                android:layout_marginTop="150dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tnr_reward"
                android:layout_marginTop="170dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/terms_condition"
                android:textColor="@color/text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/content_tnr_reward"
                android:layout_marginTop="200dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/descriptopn"
                android:textColor="@color/text"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/vector_7"
                android:layout_marginTop="280dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/ci_reward"
                android:layout_marginTop="300dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/contact_info"
                android:textColor="@color/text"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/bi_telephone"
                android:layout_marginTop="325dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/telephone"
                android:layout_marginTop="325dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/no_telephone"
                android:layout_marginStart="30dp"
                android:textColor="@color/text"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/feather_mail"
                android:layout_marginTop="355dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/mail"
                android:layout_marginTop="355dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/mail"
                android:layout_marginStart="30dp"
                android:textColor="@color/text"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/vector_7"
                android:layout_marginTop="400dp"
                android:contentDescription="@string/todo" />

            <Button
                android:layout_marginTop="450dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/redeem_more"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:text="@string/redeem_for_0_points"
                android:textAllCaps="false"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="14sp"
                android:textColor="@color/text_white"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/brand_icon"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/hyundai" />

    </androidx.cardview.widget.CardView>

</LinearLayout>