<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".Register">

    <ImageView
        android:id="@+id/register_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/logo"
        android:transitionName="logo_transit"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".1"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name_field"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_field_bg"
        android:elevation="6dp"
        android:padding="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/text"
        android:hint="@string/your_name"
        android:textColorHint="@color/text"
        android:inputType="text"
        android:autofillHints="@string/your_name"
        android:transitionName="name_transit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".27"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_username_field"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_field_bg"
        android:elevation="6dp"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:transitionName="username_transit"
        android:autofillHints="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".4"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_password_field"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_field_bg"
        android:elevation="6dp"
        android:padding="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/text"
        android:hint="@string/password"
        android:textColorHint="@color/text"
        android:inputType="textPassword"
        android:autofillHints="@string/password"
        android:transitionName="password_transit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".53"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirm_password_field"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_field_bg"
        android:elevation="6dp"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:transitionName="confirm_password_transit"
        android:autofillHints="@string/confirm_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655"/>

    <Button
        android:id="@+id/register_button_register"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/register"
        android:padding="10dp"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/bgLight"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:transitionName="register_transit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".8"/>

    <Button
        android:id="@+id/register_button_login"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:background="@drawable/register_bg"
        android:text="@string/login"
        android:padding="10dp"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/text"
        android:textSize="17sp"
        android:transitionName="login_transit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAllCaps="false"
        app:layout_constraintVertical_bias=".9"/>

</androidx.constraintlayout.widget.ConstraintLayout>